plugins {
    id 'java'
}

group = 'com.tmax.tibero'
version = '6.6.1'

// Hibernate ORM 6.6 의 최소 지원 JDK 가 11. --release 는 -target 과 달리 클래스 라이브러리까지 묶는다.
tasks.withType(JavaCompile).configureEach {
    options.release = 11
}

repositories {
    mavenCentral()
}

// 소스 폴더 구조 설정 (현재 구조에 맞게)
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        // META-INF/services 를 jar 에 넣는다. '.' 로 두면 hibernate-testing 전용 파일이 섞인다.
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
        resources {
            srcDirs = ['test/resources']
        }
    }
}

// 받은 JAR 의 정체를 파일명 말고도 확인할 수 있게 MANIFEST 에 버전과 호환 대상을 적는다.
tasks.jar {
    manifest {
        attributes(
            'Implementation-Title'  : 'Tibero Hibernate Dialect',
            'Implementation-Version': project.version,
            'Implementation-Vendor' : 'TmaxTibero',
            'Built-For-Hibernate'   : '6.6.56.Final',
            'Built-For-Tibero'      : '7.2.6 이상',
            'Built-For-Java'        : '11 이상',
            'Automatic-Module-Name' : 'com.tmax.tibero.hibernate.dialect'
        )
    }
}

tasks.test {
    exclude '**/AbstractTiberoDialectTestBase.class'
}

dependencies {
    // Hibernate
    implementation 'org.hibernate.orm:hibernate-core:6.6.56.Final'

    // Tibero JDBC 드라이버 — 각자 쓰는 드라이버의 절대 경로로 교체.
    implementation files('Tibero_JDBC_JAR_절대경로')

    // 테스트
    testImplementation 'org.hibernate.orm:hibernate-testing:6.6.56.Final'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
}
